test: keep workspace tests compatible with Java 17 image